# SquadTeamManager

backend/: docker-compose.yaml  pyproject.toml
backend/Core/observability/: IMetricCollector.py
backend/loki/: docker-compose.yaml  promtail-config.yaml
backend/src/config/: __init__.py  api.py  database.py  run.py
backend/src/infrastructure/persistence/: DataBase.py
backend/src/modules/core/observability/: ICorrelationContext.py  ILogger.py  ITracer.py
backend/src/modules/lineup/application/interfaces/: ILineUpRepository.py  ISquadRepository.py
backend/src/modules/lineup/domain/aggregates/: LineUp.py  Squad.py
backend/src/modules/lineup/domain/entities/: SquadMember.py
backend/src/modules/lineup/domain/enums/: KitCategoryEnum.py  KitEnum.py
backend/src/modules/lineup/domain/policies/: SquadPolicy.py
backend/src/modules/lineup/domain/value_objects/: Formations.py  Kit.py
backend/src/modules/shared/observability/: OpenTelemetryTracer.py
backend/src/shared/observability/: ContextVarCorrelationContex.py  JsonStdoutLogger.py  PrometheusMetricCollector.py
